# nostr_client_relay

./: .dockerignore  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  GNUmakefile  LICENSE  README.md  act.mk  build.boost.sh  build.cmake.sh  build.desktop.sh  build.mobile.sh  build.sh  build.web.sh  build.widgets.sh  build.wt.sh  nostro.css
.github/workflows/: ubuntu-matrix.yml
database/: database.json
desktop/: CMakeLists.txt  entry.cc  entry.h  feed.cc  feed.h  gnostro.cc  gnostro.hh  main.cc  nostro.h  store.cc  store.h  twitter.cc  twitter.h  window.cc  window.h
doc/: api.html  examples.html  index.html  intro.html  me.css  nostr.html  nostro.html  prism.css  prism.js  vostro.html
examples/: examples.cc  nostro_event.json
ext/Simple-WebSocket-Server-v2.0.2/: CMakeLists.txt  build.sh
ext/openssl-3.0.5/: build.bat
ext/secp256k1-0.3.2/: CMakeLists.txt
ext/wt-4.10.0/: CMakeLists.txt  WtInstall.cmake
ext/wt-4.10.0/jenkins/windows/: minimal.Jenkinsfile
ext/wt-4.10.0/src/isapi/: Isapi.C  Isapi.def
mobile/: AddQtIosApp.cmake  CMakeLists.txt  ios.toolchain.cmake  main.cpp  main.qml  model.cpp  model.h  user.cpp  user.h  window.cpp  window.h
resources/: database.json  feed.json  server.crt  server.key
src/: client.cc  database.cc  database.hh  http.cc  http.hh  log.cc  log.hh  message.cc  message.hh  nostr.cc  nostr.hh  relay.cc  relay.hh  uuid.cc  uuid.hh  wss_client.cc  wss_relay.cc  wss_req.cc
src/http/: http.cc  http.hh  http_client.cc  http_relay.cc
src/nostril/: CMakeLists.txt  aes.c  aes.h  base64.c  base64.h  config.h  cursor.h  endian.h  hex.h  nostri.c  nostri.h  nostril.c  proof.h  random.h  sha256.c  sha256.h
test/: contacts.json  list_01.txt  list_02.txt  test_nostro.cc  tests.cc
web/: CMakeLists.txt  feed.cc  feed.hh  follows.cc  follows.hh  home.cc  home.hh  nostro.css  nostro_web.cc  web.cc  web.hh
xcode/CMakeScripts/: ReRunCMake.make
xcode/Debug/: follows_event.json  follows_request.json  metadata_content.1.json  metadata_content.10.json  metadata_content.11.json  metadata_content.12.json  metadata_content.13.json  metadata_content.14.json  metadata_content.15.json  metadata_content.2.json  metadata_content.3.json  metadata_content.4.json  metadata_content.5.json  metadata_content.6.json  metadata_content.7.json  metadata_content.8.json  metadata_content.9.json  pubkeys.txt  req_metadata.json
xcode/Shared/: ContentView.swift  GnostrView.swift  Persistence.swift  gnostr.swift
xcode/Tests iOS/: Tests_iOS.swift
xcode/Tests macOS/: Tests_macOS.swift
xcode/ext/secp256k1-0.3.2/: CTestTestfile.cmake  DartConfiguration.tcl
xcode/ext/secp256k1-0.3.2/CMakeScripts/: ReRunCMake.make
xcode/ext/secp256k1-0.3.2/libsecp256k1.xcodeproj/: project.pbxproj
xcode/ext/secp256k1-0.3.2/src/: CTestTestfile.cmake
xcode/gnostr.swift.xcodeproj/: project.pbxproj
xcode/gnostr.swift.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/src/nostril/Debug/: configurator  nostril
xcode/src/nostril/configurator.out.dSYM/Contents/: Info.plist
xcode/src/nostril/configurator.out.dSYM/Contents/Resources/DWARF/: configurator.out
xcode/web/: wt_config.xml
